--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
                 <h1>
                     We are white <i class="fas fa-graduation-cap"></i> hackers <br>
-                    making an internet  <br>a safer place.
+                    providing hassle free  <br>cybersecurity solutions.
                 </h1>
 
                 <div class="home-content__buttons">
